--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_content %}
-Centre For 
+{% block content %}
 
-Citizen Science &
 
-Biodiversity Informatics
-
-{% endblock %}
-
+{% endblock content %}
