--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -1,7 +1,70 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-{% block page_content %}
 
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CCSBI</title>
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-mdb-toggle="collapse"
+                data-mdb-target="#navbarExample01"
+                aria-controls="navbarExample01"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <i class="fas fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item active">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Citsci Projcts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Citsci Networks</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Data Sets</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Data Sets</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Resources </a>
+                  </li>                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Capacity</a>
+                  </li>                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Building</a>
+                  </li>                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Events</a>
+                  </li>                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Opportunities</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                  </li>
+
+                      
+                </ul>
+              </div>
+            </div>
+          </nav>
+    {% block content %}{% endblock content %}
+    </body>
+</html>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
