--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -1,6 +1,137 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
+<div class="container">
+    <div >
+
+        <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
+    </div>
+    <p class="text-justify"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn? You are at the right place! The centre for citizen science and biodiversity informatics will guide you to be a citizen scientist! </b></p>
+    <br/>
+    <br/>
+
+
+    <div class="row">
+        
+        <div class="col-md-6" >
+            <br/>
+            <h2><b>What is Citizen Science</b></h2>
+
+ 
+            <br/>
+            <br/>  
+            <p><b>Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
+            </b></p>
+            <p><b>Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
+            </b></p>
+        </div>
+        <div class="col-md-5" >
+            <img src="{% static '/images/home2.jpg' %}" padding-left:25%  width="150%"    alt="...">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6" >
+            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="150%"    alt="...">
+        </div>
+        <div class="col-md-6" >  
+            <br/>
+            <br/>    
+            <br/>
+            <br/>  
+            <br/>
+            <br/>    
+            <br/>
+            <br/>  
+            <h2><b></b>Citizen Science In India? </b></h2> 
+            <p>We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
+
+        </div>
+    </div>
+    <h2 style="text-align: center;"><b>Centre for Citizen Science and Biodiversity Informatics</b></h2>
+    <p>
+        Building a knowledgeable society is inevitable for the conservation and management of natural resources. Training the general public to explore and learn their biodiversity is the best way to do so and Citizen science can be a perfect tool for that. The Centre for Citizen Science and biodiversity informatics (CCSBI) is an initiative by the Kerala Forest Research Institute. We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity data for the future management and conservation activities. 
+    </p>
+
+    <div>
+        <h2><b>Our specific objectives are: </b></h2>
+        <ul>
+            <li>
+                Coordinate and co-develop citizen science programmes in critical areas,
+            </li>
+            <li>
+                Generate high-quality biodiversity data for science and conservation,
+            </li>
+            <li>
+                Organise capacity-building workshops for researchers for developing effective citizen science programmes, big data analytics and policy-making,
+            </li>
+            <li>
+                Develop public outreach programmes to improve environmental awareness and the capacity of citizens to contribute quality data, and
+            </li>
+            <li>
+                Collate biodiversity data from the state.
+            </li>
+        </ul>
+        <p>We welcome you all to explore, learn and grow with us!</p>
+    </div>
+    <h2>Our Network & Impact</h2>
+    <div class="row">
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3>50+ Institutions</h3>
+                    <hr color="red">
+                    <p>Actively participating in 
+
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                    
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3>50+ Institutions</h3>
+                    <hr color="red">
+                    <p>Actively participating in 
+
+                        this citizen Science 
+                        
+                        Intitiative</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h2>hi</h2>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h2>hi</h2>
+                </div>
+            </div>
+        </div>
+
+        
+
+    </div>
+
+
+    
+
+
+
+</div>
 
 
 {% endblock content %}
