--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -1,12 +1,18 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>CCSBI</title>
     </head>
 
-    <body>
+    <body > 
+      <div >
+
+        
+      </div>
+      <div class="container">
+        <img src="{% static '/images/headerimg.png' %}"   alt="...">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <button
@@ -61,6 +67,7 @@
               </div>
             </div>
           </nav>
+        </div>
     {% block content %}{% endblock content %}
     </body>
 </html>
