--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -42,6 +42,12 @@
             <br/>
             <br/>    
             <br/>
+            <br/>    
+            <br/>
+            <br/>  
+            <br/>
+            <br/>    
+            <br/>
             <br/>  
             <h2><b></b>Citizen Science In India? </b></h2> 
             <p>We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
@@ -74,11 +80,13 @@
         </ul>
         <p>We welcome you all to explore, learn and grow with us!</p>
     </div>
-    <h2>Our Network & Impact</h2>
+    <h1><b>Our Network & Impact</b></h1>
+    <br>
     <div class="row">
         <div class="col">
             <div class="card text-center">
                 <div class="card-body">
+                    <img src="{% static '/images/icon1.png' %}"   alt="...">
                     <h3>50+ Institutions</h3>
                     <hr color="red">
                     <p>Actively participating in 
@@ -95,13 +103,26 @@
         <div class="col">
             <div class="card text-center">
                 <div class="card-body">
-                    <h3>50+ Institutions</h3>
+                    <img src="{% static '/images/icon2.png' %}"   alt="...">
+                    <h3>500 + students </h3>
                     <hr color="red">
-                    <p>Actively participating in 
+                    <p>Actively observing nature
 
-                        this citizen Science 
+                        and contributing their 
                         
-                        Intitiative</p>
+                        observations.</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="col" >
+            <div class="card text-center  text-white bg-warning " >
+                <div class="card-body">
+                    <img src="{% static '/images/icon3.png' %}"   alt="...">
+                    <h3>5000 + Observations </h3>
+                    <hr color="red">
+                    <p>All over 5000+
+                        Observations</p>
                 </div>
             </div>
         </div>
@@ -109,15 +130,11 @@
         <div class="col">
             <div class="card text-center">
                 <div class="card-body">
-                    <h2>hi</h2>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="col">
-            <div class="card text-center">
-                <div class="card-body">
-                    <h2>hi</h2>
+                    <img src="{% static '/images/icon4.png' %}"   alt="...">
+                    <h3>Numerous data </h3>
+                    <hr color="red">
+                    <p>Quality Data for Scientific 
+                        Research activities</p>
                 </div>
             </div>
         </div>
