--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -69,6 +69,17 @@
           </nav>
         </div>
     {% block content %}{% endblock content %}
+    <footer class="page-footer font-small ">
+      <div class="container">
+        <h2><b>Get In Touch</b></h2>
+        <span>the quick fox jumps over the 
+
+          lazy dog</span>
+
+      </div>
+      
+
+    </footer>
     </body>
 </html>
 
