home page final

--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -7,7 +7,9 @@
 
         <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
     </div>
-    <p class="text-justify"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn? You are at the right place! The centre for citizen science and biodiversity informatics will guide you to be a citizen scientist! </b></p>
+    <p class="text-center"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
+    
+        You are at the right place!<span style="color: purple;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b></p>
     <br/>
     <br/>
 
@@ -21,10 +23,10 @@
  
             <br/>
             <br/>  
-            <p><b>Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
-            </b></p>
-            <p><b>Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
-            </b></p>
+            <p class="text-justify">Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
+            </p>
+            <p class="text-justify">Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
+            </p>
         </div>
         <div class="col-md-5" >
             <img src="{% static '/images/home2.jpg' %}" padding-left:25%  width="150%"    alt="...">
@@ -50,18 +52,31 @@
             <br/>
             <br/>  
             <h2><b></b>Citizen Science In India? </b></h2> 
-            <p>We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
+            <p class="text-justify">We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
 
         </div>
     </div>
     <h2 style="text-align: center;"><b>Centre for Citizen Science and Biodiversity Informatics</b></h2>
-    <p>
+    <p class="text-justify">
         Building a knowledgeable society is inevitable for the conservation and management of natural resources. Training the general public to explore and learn their biodiversity is the best way to do so and Citizen science can be a perfect tool for that. The Centre for Citizen Science and biodiversity informatics (CCSBI) is an initiative by the Kerala Forest Research Institute. We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity data for the future management and conservation activities. 
     </p>
 
     <div>
         <h2><b>Our specific objectives are: </b></h2>
-        <ul>
+        <br>
+        <div class="row">
+            
+            <div class="col-md-5" >
+                <img src="{% static '/images/Objectives.png' %}"  width="100%" height="80%"    alt="...">
+            </div>
+            
+        
+            <div class="col-md-7" >
+
+
+        <br>
+        <br>       
+        <ul >
             <li>
                 Coordinate and co-develop citizen science programmes in critical areas,
             </li>
@@ -78,16 +93,20 @@
                 Collate biodiversity data from the state.
             </li>
         </ul>
-        <p>We welcome you all to explore, learn and grow with us!</p>
+    </div>
+    <p>We welcome you all to explore, learn and grow with us!</p>
+</div>
+        
     </div>
     <h1><b>Our Network & Impact</b></h1>
     <br>
     <div class="row">
-        <div class="col">
-            <div class="card text-center">
-                <div class="card-body">
-                    <img src="{% static '/images/icon1.png' %}"   alt="...">
-                    <h3>50+ Institutions</h3>
+        <div class="col" style="width:100%">
+            <div class="card text-center" >
+                <div class="card-body" style="height: 300px;">
+                    <img src="{% static '/images/icon5.png' %}" style="height:75px;"    alt="...">
+                    <h3>50 +    </h3>
+                    <h3>Institutions</h3>
                     <hr color="red">
                     <p>Actively participating in 
 
@@ -102,13 +121,11 @@
         <hr>
         <div class="col">
             <div class="card text-center">
-                <div class="card-body">
+                <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon2.png' %}"   alt="...">
-                    <h3>500 + students </h3>
+                    <h3>500 + Volunteers </h3>
                     <hr color="red">
-                    <p>Actively observing nature
-
-                        and contributing their 
+                    <p>Actively  contributing their 
                         
                         observations.</p>
                 </div>
@@ -117,7 +134,7 @@
         <hr>
         <div class="col" >
             <div class="card text-center  text-white bg-warning " >
-                <div class="card-body">
+                <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon3.png' %}"   alt="...">
                     <h3>5000 + Observations </h3>
                     <hr color="red">
@@ -129,9 +146,10 @@
         <hr>
         <div class="col">
             <div class="card text-center">
-                <div class="card-body">
+                <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon4.png' %}"   alt="...">
-                    <h3>Numerous data </h3>
+                    <h3>DataSets  </h3>
+                    <br>
                     <hr color="red">
                     <p>Quality Data for Scientific 
                         Research activities</p>
@@ -142,8 +160,33 @@
         
 
     </div>
+    <br>
+    
+    <div class="row">
+        
+        <div class="col-md-5" >
+            
+            <br/>
+            <b><hr  color="red" style="margin-left:0px; height: 5px;width:15%;"></b>
+            <h2><b>Join the Growing </b></h2>
+            <h2><b>CitSci Network</b></h2>
+
+ 
+            <br/>
+            <br/>  
+            <p class="text-justify">
+                Becoming a citizen scientist is quite simple; create an account on a CitSci platform like <a href="https://www.inaturalist.org">iNaturalist</a>, explore your backyard, click photos of the biodiversity around you and upload your observations. Welcome to the community!
 
 
+            </p>
+            <p class="text-justify">
+                Want to do more? We will help you take part in prestigious CitSci projects across the country or to create your own citsci projects. Check out the Projects and Resources page for more information.  
+            </p>
+        </div>
+        <div class="col-md-7" >
+            <img src="{% static '/images/home4.png' %}"  width="100%" height="100%"   alt="...">
+        </div>
+    </div>
     
 
 
