--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -41,17 +43,11 @@
                     <a class="nav-link" href="#">Data Sets</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Data Sets</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="#">Resources </a>
                   </li>                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Capacity</a>
-                  </li>                  
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Building</a>
-                  </li>                  
+                    <a class="nav-link" href="#">Capacity Building</a>
+                  </li>                    
                   <li class="nav-item">
                     <a class="nav-link" href="#">Events</a>
                   </li>                  
@@ -59,7 +55,7 @@
                     <a class="nav-link" href="#">Opportunities</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav-link" href="#">Contact</a>
                   </li>
 
                       
@@ -69,12 +65,59 @@
           </nav>
         </div>
     {% block content %}{% endblock content %}
+    <br>
+    <br>
+    <b><hr ></b>
     <footer class="page-footer font-small ">
       <div class="container">
-        <h2><b>Get In Touch</b></h2>
-        <span>the quick fox jumps over the 
+        <div class="row">
+        
+          <div class="col-sm-3" >
+            <h2><b>Get In Touch</b></h2>
+            <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
+            
+            
+            <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>,<a href="mailto:ccsbi@kfri.res.in" style="color: black;">ccsbi@kfri.res.in </a> 
+            <br>
 
-          lazy dog</span>
+            <span><a href="tel: 04872690272" style="color: black;"><i class="bi bi-telephone"></i> 04872690272</a></span>
+            <br>
+            <span>
+              <a href="https://www.facebook.com/profile.php?id=100088452392023"><i class="bi bi-facebook"> </i></a>
+              &nbsp;
+              <a href="https://www.instagram.com/citsci_india/"><i class="bi bi-instagram"></i></a>
+              &nbsp;
+              <a href="https://www.youtube.com/channel/UCQOj_87QKImHsRJmUUrTsDg"><i class="bi bi-youtube"></i></a>
+              &nbsp;
+              
+            </span>
+
+          </div>
+          <div class="col-md-3" >
+              <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+          </div>
+          <div class="col-sm-3" >
+            <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+          </div>
+
+          <div class="col-sm-3" >
+            
+            <span>Centre for Citizen Science &
+
+              Biodiversity Informatics,
+            </span><br><span>
+              
+              Kerala Forest Research Institute
+              
+              Peechi P.O,  Pin- 680653
+            </span><br><span>
+              Thrissur , Kerala, India.
+
+            
+          </div>
+        </div>
+
+
 
       </div>
       
@@ -86,3 +129,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/9f03.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
