--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -20,13 +20,13 @@
               <button
                 class="navbar-toggler"
                 type="button"
-                data-mdb-toggle="collapse"
-                data-mdb-target="#navbarExample01"
-                aria-controls="navbarExample01"
+                data-toggle="collapse"
+                data-target="#navbarExample01"
+                aria-controls="navbarResponsive"
                 aria-expanded="false"
                 aria-label="Toggle navigation"
               >
-                <i class="fas fa-bars"></i>
+                <i class="navbar-toggler-icon"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarExample01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
