--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -31,28 +31,28 @@
               <div class="collapse navbar-collapse" id="navbarExample01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Citsci Projcts</a>
+                    <a class="nav-link" href="/projects">Citsci Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Citsci Networks</a>
+                    <a class="nav-link" href="/Networks">Citsci Networks</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Data Sets</a>
+                    <a class="nav-link" href="/Datasets">Data Sets</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Resources </a>
+                    <a class="nav-link" href="/Resources">Resources </a>
                   </li>                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Capacity Building</a>
+                    <a class="nav-link" href="/Capacity">Capacity Building</a>
                   </li>                    
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Events</a>
+                    <a class="nav-link" href="/Events">Events</a>
                   </li>                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Opportunities</a>
+                    <a class="nav-link" href="/Opportunities">Opportunities</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
