--- a/CcsbiProject/templates/Projects.html
+++ b/CcsbiProject/templates/Projects.html
@@ -76,7 +76,10 @@
         
 <br>
 <div class="container">
-  <img src="{% static '/images/projects.png' %}" width="100%"   alt="...">
+  <div class="center" style="margin-left: 15%;" >
+    <img src="{% static '/images/projects.png' %}" width="700px" height="600px"  alt="...">
+  </div>
+  
   <br>
   <br>
   <h2 style="color: #1E93FE;">Explore and contribute !</h2>
