--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -14,11 +14,11 @@
         
       </div>
       <div class="container">
-        <img src="{% static '/images/headerimg.png' %}"   alt="...">
+        <img src="{% static '/images/headerimg1.svg' %}"   alt="...">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <button
-                class="navbar-toggler"
+                class="navbar-toggler navbar-toggler-right"
                 type="button"
                 data-toggle="collapse"
                 data-target="#navbarExample01"
