--- a/CcsbiProject/templates/Resources.html
+++ b/CcsbiProject/templates/Resources.html
@@ -2,4 +2,22 @@
 {% load static %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <img src="{% static '/images/resources.svg' %}" padding-left:25%  width="100%"    alt="...">
+
+        </div>
+        <div class="col-sm-6">
+            <p class="text-justify" style="margin-top: 50%;">
+                Here you can find the video tutorials on how to use citizen
+                science platforms, Identification keys for common species and
+                animal acoustic library.
+            </p>
+
+        </div>
+
+    </div>
+
+</div>
 {% endblock content %}
