--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -2,4 +2,108 @@
 {% load static %}
 
 {% block content %}
+<br>
+<div class="container">
+    <p style="font-size: 30px; " class="text-center">
+    <b> Work with us </b>
+    </p>
+    <p class="text-justify">
+        The <b>CitSci Network</b> is a collaboration of student clubs (citizen science clubs), researchers, NGOs, Academic institutions and public libraries with CCSBI for generating biodiversity data through citizen science. Each unit of participants are expected to work independently on their area of focus while maintaining continuous communication with the centre.  The centre will be conducting productive workshops and training programmes on citizen science for the participants for optimising their workflow and outreach activities. If you represent any of the below-mentioned categories and are interested in joining, feel free to contact us. 
+
+    </p>
+    <hr  color="red" style="margin-left:0px; height: 5px;width:15%;">
+    <div class="row">
+        <div class="col-sm-8" >
+            <h2 >
+                <b>NGOs </b>
+
+            </h2>
+            <p class="text-justify">
+                Non governmental organisations have always been on the frontiers of wildlife conservation. Citizen science is an opportunity for them to contribute more to science and nature conservation. NGOs can work with local communities on biodiversity-related issues through citizen science, with the necessary training and guidance by CCSBI. This will help in converting indigenous knowledge about species distributions into digital and publicly accessible format, at the same time this will help in generating conservation attitudes within the stakeholder communities. NGOs can collaborate with CCSBI for organising biodiversity surveys and associated workshops.
+            </p>
+
+        </div>
+        
+        <div class="col-sm-4" >
+            <img src="{% static '/images/ngo.jpg' %}" padding-left:25%  width="100%"    alt="...">
+
+        </div>
+
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="col-sm-4" >
+            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
+        
+        <div class="col-sm-8" >
+            <br>
+            <h2 >
+                <b>Academic/research institutes </b>
+
+            </h2>
+            <p class="text-justify">
+                Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing bioblitz-like events anywhere with the help of CCSBI. 
+                Being a part of this network will be beneficial for its students and faculties as they can take part in workshops, training programmes and events conducted by CCSBI. 
+            </p>
+
+        </div>
+
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-8" >
+            <h2 >
+                <b>Citizen Science Clubs </b>
+
+            </h2>
+            <p class="text-justify">
+                Citizen science clubs are intended to bring together future conservationists and researchers across the state. 
+                Clubs will be functioning at individual college campuses (Life science/environmental science). 
+                Graduate and postgraduate students are invited to take part. Club members will be encouraged to start their own CitSci projects under the guidance of CCSBI. 
+                Selected club members will be accepted as interns at KFRI.  This is a great opportunity for students to gain knowledge about biodiversity, research methodologies and tools. Students without a science background can also join. 
+            </p>
+
+        </div>
+        
+        <div class="col-sm-4" >
+            <img src="{% static '/images/pollinator_count.svg' %}" padding-left:25%  width="100%"    alt="...">
+
+        </div>
+
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="col-sm-4" >
+            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
+        
+        <div class="col-sm-8" >
+            <br>
+            <h2 >
+                <b>Public libraries</b>
+
+            </h2>
+            <p class="text-justify">
+                Public libraries can play an effective role in popularising citizen science. Creating a local biodiversity database at each public library will help 
+                its members understand their biodiversity and the importance of sustainable living. 
+                We invite public libraries to collaborate with us to generate local biodiversity databases state-wide. 
+                Library members will be provided with proper training for carrying out citizen science biodiversity assessment. 
+            </p>
+
+        </div>
+
+    </div>
+
+</div>
 {% endblock content %}
+
+
+
+
+
+
+ 
+
